[gd_scene load_steps=7 format=2]

[ext_resource path="res://profile/UserProfile.gd" type="Script" id=1]
[ext_resource path="res://profile/friendlist.gd" type="Script" id=2]
[ext_resource path="res://fonts/montserrat_eb_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://profile/background.png" type="Texture" id=4]
[ext_resource path="res://profile/nameback.png" type="Texture" id=5]
[ext_resource path="res://profile/picholder.gd" type="Script" id=6]

[node name="UserProfile" type="Control"]
anchor_right = 1.864
anchor_bottom = 1.797
margin_right = -884.736
margin_bottom = -478.2
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 896.0
margin_bottom = 480.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1870, 1030 )
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_right = 1023.0
margin_bottom = 1030.0
rect_min_size = Vector2( 1023, 1030 )
custom_constants/separation = 15

[node name="Name" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 11.0
margin_right = 1011.0
margin_bottom = 89.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Name"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Nickname:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Name"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Strength" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 11.0
margin_top = 104.0
margin_right = 1011.0
margin_bottom = 183.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Strength"]
margin_right = 617.0
margin_bottom = 79.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Friendship points:"
align = 2

[node name="Slider" type="HSlider" parent="Container/VBoxContainer2/Strength"]
margin_left = 642.0
margin_right = 1000.0
margin_bottom = 79.0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = 1.0
max_value = 5.0
value = 2.0

[node name="ConfirmButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 343.0
margin_top = 198.0
margin_right = 679.0
margin_bottom = 283.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "CONFIRM"

[node name="changeprofilebutton" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_top = 298.0
margin_right = 1023.0
margin_bottom = 398.0
rect_min_size = Vector2( 1023, 100 )

[node name="changepropic" type="Button" parent="Container/VBoxContainer2/changeprofilebutton"]
margin_right = 1023.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Change Profile Picture"

[node name="picholder" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_top = 413.0
margin_right = 1023.0
margin_bottom = 813.0
rect_min_size = Vector2( 600, 400 )
script = ExtResource( 6 )

[node name="FileDialog" type="FileDialog" parent="Container/VBoxContainer2/picholder"]
margin_right = 1023.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" type="Sprite" parent="Container/VBoxContainer2/picholder"]

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_top = 828.0
margin_right = 1023.0
margin_bottom = 1030.0
size_flags_vertical = 3

[node name="mainmenu" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_right = 388.0
margin_bottom = 202.0
rect_min_size = Vector2( 388, 202 )
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"

[node name="exit" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 392.0
margin_right = 780.0
margin_bottom = 202.0
rect_min_size = Vector2( 388, 202 )
custom_fonts/font = ExtResource( 3 )
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_left = 1073.0
margin_right = 1870.0
margin_bottom = 1030.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Container/VBoxContainer"]
margin_right = 797.0
margin_bottom = 1030.0
rect_min_size = Vector2( 797, 1030 )
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer/Control"]
margin_left = 6.0
margin_top = 158.0
margin_right = 774.0
margin_bottom = 276.0
rect_min_size = Vector2( 768, 118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Container/VBoxContainer/Control"]
margin_top = 292.0
margin_right = 774.0
margin_bottom = 966.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listoffriends" type="VBoxContainer" parent="Container/VBoxContainer/Control/ScrollContainer"]
margin_right = 774.0
margin_bottom = 674.0
rect_min_size = Vector2( 774, 674 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Container/VBoxContainer/Control/ScrollContainer/listoffriends"]
margin_right = 774.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "Melissa"

[node name="Button2" type="Button" parent="Container/VBoxContainer/Control/ScrollContainer/listoffriends"]
margin_top = 89.0
margin_right = 774.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 3 )
text = "Eduardo"

[node name="Button3" type="Button" parent="Container/VBoxContainer/Control/ScrollContainer/listoffriends"]
margin_top = 178.0
margin_right = 774.0
margin_bottom = 263.0
custom_fonts/font = ExtResource( 3 )
text = "Michael"

[node name="NinePatchRect" type="NinePatchRect" parent="Container/VBoxContainer/Control"]
margin_right = 772.0
margin_bottom = 152.0
rect_min_size = Vector2( 772, 152 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/VBoxContainer/Control/NinePatchRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 126.0
margin_top = -39.0
margin_bottom = 40.0
rect_min_size = Vector2( 646, 79 )
custom_fonts/font = ExtResource( 3 )
text = "YOUR FRIENDS!"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Container/VBoxContainer2/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/changeprofilebutton/changepropic" to="Container/VBoxContainer2/picholder" method="_on_changepropic_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/mainmenu" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/mainmenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="text_changed" from="Container/VBoxContainer/Control/LineEdit" to="Container/VBoxContainer/Control" method="_on_LineEdit_text_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
